사용자 계정 모듈 연동 완료

--- a/client_test.html
+++ b/client_test.html
@@ -374,19 +374,14 @@
                             <input type="text" name="_userID" value="">
                             <br>
 
-                            <label> pswd: </label>
+                            <label> 기존pswd: </label>
                             <input type="text" name="_pswd" value="">
                             <br>
 
-
-
-                            <label> name: </label>
-                            <input type="text" name="_name" value="">
+                            <label> 새pswd: </label>
+                            <input type="text" name="_pswd2" value="">
                             <br>
 
-                            <label> joined_date: </label>
-                            <input type="text" name="_joined_date" value="">
-                            <br>
 
                             <label> zipCode: </label>
                             <input type="text" name="_zipCode" value="">
@@ -404,9 +399,6 @@
                             <input type="text" name="_telNum" value="">
                             <br>
 
-                            <label> mileage: </label>
-                            <input type="text" name="_mileage" value="">
-                            <br>
 
 
 
@@ -431,6 +423,10 @@
 
                             <label> pswd: </label>
                             <input type="text" name="_pswd" value="">
+                            <br>
+
+                            <label> 개인정보 파기에 동의합니다.(동의 입력): </label>
+                            <input type="text" name="_signature" value="">
                             <br>
 
                             <input type="submit" value="서버에 요청">
