--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
             <! 로그아웃>
 
-            <li>회원정보</li>
+            <li><a href="/user_editInfo.html">회원정보 수정</a></li>
             <li>장바구니</li>
             <li>주문조회</li>
 
@@ -49,5 +49,15 @@
         </tr>
 
     </table>
+
+
+
+
+    <! 하단 메뉴바: 회원탈퇴>
+    <div>
+        <ul class="menu">
+            <li><a href="/user_quit.html">회원탈퇴</a></li>
+        </ul>
+    </div>
 
 </body>
