관리자 item 모듈 연동 완료

--- a/client_test.html
+++ b/client_test.html
@@ -58,7 +58,7 @@
 						    <br>
 
                             <label> categoryID </label>
-                            <input type="text" name="_categoryID" value="">
+                            <input type="text" name="_category" value="">
                             <br>
                             
                             <label> description </label>
@@ -87,6 +87,10 @@
 
 
                             <! 물품 정보 변경>
+                            <label> 기존itemID: </label>
+                            <input type="text" name="_org_itemID" value="">
+                            <br>
+                            <br>
                             <label> itemID: </label>
                             <input type="text" name="_itemID" value="">
                             <br>
@@ -96,8 +100,8 @@
                             <label> price </label>
                             <input type="text" name="_price" value="">
                             <br>
-                            <label> categoryID </label>
-                            <input type="text" name="_categoryID" value="">
+                            <label> category </label>
+                            <input type="text" name="_category" value="">
                             <br>
 
                             <label> description </label>
