--- a/admin_itemAdd.html
+++ b/admin_itemAdd.html
@@ -32,6 +32,14 @@
             <input type="text" name="_description" value="">
             <br>
 
+            <label> description2 </label>
+            <input type="text" name="_description2" value="">
+            <br>
+
+            <label> description3 </label>
+            <input type="text" name="_description3" value="">
+            <br>
+
             <label> company </label>
             <input type="text" name="_company" value="">
             <br>
