--- a/main_admin.html
+++ b/main_admin.html
@@ -2,15 +2,22 @@
 
 <body>
 
-    <! 회원 관리>
+    <! 관리자 확인>
     <div>
         <ul class="menu">
-            <li>장바구니</li>
-            <li>주문조회</li>
+            <li><a href="/admin_itemAdd.html">로그인</a></li>
 
         </ul>
     </div>
 
+    <! 회원 관리>
+    <! 관리자는 회원들의 개인정보를 함부로 조회할 수 없다>
+    <div>
+        <ul class="menu">
+            <li><a href="/admin_itemAdd.html">회원수 조회</a></li>
+
+        </ul>
+    </div>
 
     <! 물품 관리>
     <div>
@@ -18,44 +25,34 @@
             <li><a href="/admin_itemAdd.html">물품 추가</a></li>
             <li><a href="/admin_itemEdit.html">물품 수정</a></li>
             <li><a href="/admin_itemDel.html">물품 삭제</a></li>
-            <li>장바구니</li>
             <li>주문조회</li>
 
         </ul>
     </div>
 
 
-    <! 카테고리별 리스트>
-    <ul>
-        <li>분류1</li>
-        <li>분류2</li>
-        <li>분류3</li>
-        <li>분류3</li>
-        <li>분류3</li>
-        <li>분류3</li>
-        <li>분류3</li>
+    <! 카테고리 관리>
+    <div>
+        <ul class="menu">
+            <li><a href="/admin_itemAdd.html">카테고리 추가</a></li>
+            <li><a href="/admin_itemEdit.html">카테고리 수정</a></li>
+            <li><a href="/admin_itemDel.html">카테고리 삭제</a></li>
 
-    </ul>
+        </ul>
+    </div>
 
-    <! 검색>
-    <! 이미지 검색>
 
-    <! 메인페이지 또는 상품 상세정보 페이지>
-    <! 주간 베스트>
+    <! 주문 관리>
+    <div>
+        <ul class="menu">
+            <li><a href="/admin_itemAdd.html">주문 조회</a></li>
+            <li><a href="/admin_itemEdit.html">주문 조회(미처리)</a></li>
+            <li><a href="/admin_itemDel.html">주문 처리</a></li>
 
-    <! 하단 업체정보>
-    <table>
-        <tr>
-            <th>업체</th>
-            <th>대표</th>
-            <th>주소</th>
-        </tr>
-        <tr>
-            <th>전화</th>
-            <th>사업자 등록번호</th>
-        </tr>
+        </ul>
+    </div>
 
-    </table>
+
 
 
 
