--- a/main_user.html
+++ b/main_user.html
@@ -3,7 +3,7 @@
 <body>
 
     <! 상단 메뉴바>
-    <div>
+    <div>메뉴
         <ul class="menu">
             <li><a href="/user_join.html">회원가입</a></li>
             <li><a href="/user_login.html">로그인</a></li>
@@ -19,23 +19,61 @@
 
 
     <! 카테고리별 리스트>
-    <ul>
+    <ul>카테고리1
         <li>분류1</li>
         <li>분류2</li>
         <li>분류3</li>
         <li>분류3</li>
         <li>분류3</li>
-        <li>분류3</li>
-        <li>분류3</li>
+    </ul>
 
+    <ul>
+        카테고리2
+        <li>분류1</li>
+        <li>분류2</li>
+        <li>분류3</li>
+        <li>분류3</li>
+        <li>분류3</li>
+    </ul>
+
+    <ul>
+        카테고리3
+        <li>분류1</li>
+        <li>분류2</li>
+        <li>분류3</li>
+        <li>분류3</li>
+        <li>분류3</li>
+    </ul>
+
+    <ul>
+        카테고리4
+        <li>분류1</li>
+        <li>분류2</li>
+        <li>분류3</li>
+        <li>분류3</li>
+        <li>분류3</li>
     </ul>
 
     <! 검색>
-    <! 이미지 검색>
+    <div class="search">
+        <form action="server_test.php" method="post">
+            <br>
+         <input type="hidden" name="_WHAT_TO_DO" value="SEARCH">
 
+            <input type="text" name="_queryStr" value="">
+
+            <input type="submit" value="검색">
+            <br>
+        </form>
+    </div>
+
+
+    주간베스트
     <! 메인페이지 또는 상품 상세정보 페이지>
     <! 주간 베스트>
 
+
+    업체정보
     <! 하단 업체정보>
     <table>
         <tr>
