--- a/kspay_wh_order.html
+++ b/kspay_wh_order.html
@@ -129,7 +129,7 @@
         <tr>
           <td width="110"><img src="http://kspay.ksnet.to/store/KSPayFlashV1.3/mall/imgs/ico_right.gif" width="11" height="11" align="absmiddle"> 상품명</td> 
 		  <!--상품명 50Byte(한글 25자) 입니다. ' " ` 는 사용하실수 없습니다. 따옴표,쌍따옴표,백쿼테이션 -->
-          <td width="290"><input type='text' name='sndGoodname' value='당근10kg' size='30'></td>
+          <td width="290"><input type='text' name='sndGoodname' value='test결제입니다.' size='30'></td>
         </tr>
         <tr bgcolor="#E3E3E3">
           <td height="1" colspan="2"></td>
@@ -144,7 +144,7 @@
         </tr>
         <tr>
           <td width="110"><img src="http://kspay.ksnet.to/store/KSPayFlashV1.3/mall/imgs/ico_right.gif" width="11" height="11" align="absmiddle"> 주문자명</td> 
-          <td width="290"><input type='text' name='sndOrdername' value='김토끼' size='30'></td>
+          <td width="290"><input type='text' name='sndOrdername' value='test결제입니다.' size='30'></td>
         </tr>
         <tr bgcolor="#E3E3E3">
           <td height="1" colspan="2"></td>
