--- a/이용약관.html
+++ b/이용약관.html
@@ -374,7 +374,12 @@
                     본 약관은 2011년01월26일부터 적용됩니다.
 
                 </textarea>
+            <form>
+                동의 <input type="radio" name="response" value="accept"> 
+                거부 <input type="radio" name="response" value="reject"><br><br>
 
+                <input type="submit" value='제출' onclick='alert("감사합니다.")'>
+            </form>
             </div>
 
 </body>
